2006-05-24  Christian Stimming <stimming@tuhh.de>

	* configure.in: Deactivate --enable-sql because PostgreSQL backend
	is still broken and we can't fix it before 2.0.0; bug#332251.

2006-05-23  Joshua Sled  <jsled@asynchronous.org>

	* src/register/register-gnome/gnucash-sheet.c
	(GTK_ALLOWED_SELECTION_WITHIN_INSERT_SIGNAL): Change test to be
	open-ended on the top, as we expect future GTKs will not allow
	this either, as experience has shown.  Should fix Bug#342182.

2006-05-22  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/qif-import/*:
	  remove hook to test druid for 2.0 release.

2006-05-22  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/gnc-plugin-page-account-tree.c,
	gnc-plugin-page-register.c: Deactivate the "View Lots" menu item
	because the lot viewer is unfinished as well.

	* src/gnome/gnc-plugin-basic-commands.c: Deactivate the "Close
	Books" menu item because that feature is unfinished as well.

	* src/gnome/gnc-plugin-basic-commands.c: Hide the "Export account
	chart as QSF" as well. Not ready for 2.0.0 due to e.g. bug#341559.

2006-05-21  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/gnc-plugin-basic-commands.c,
	src/gnome/ui/gnc-plugin-basic-commands-ui.xml: Hide the "QSF
	Import" for the 2.0.0 release because it is not yet finished. Can
	be activated again in the next developing HEAD branch.

	* po/ro.po: Initial Romanian translation by Danny Fischer
	<dan.pescaru@gmail.com>

2006-05-20  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-file.[ch]:
	* src/import-export/log-replay/gnc-log-replay.c:
	* src/import-export/qif-import/druid-qif-import.c: Extend
	  gnc_file_dialog to take a GList of GtkFileFilters instead of a
	  filter string. Allows patterns like *.[Qq][Ii][Ff] without
	  messing up the dialog, fixes #336124.

2006-05-19  David Hampton  <hampton@employees.org>

	* src/register/register-gnome/gnucash-grid.c: Make the blue
	past/future dividing line thicker so that it is obvious.  Fixes
	#342051.
